Fixed overflowing bug on smaller screens at the top. SearchBar vertical gap bug to be fixed as well

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,9 +17,8 @@ $small: 924px;
 }
 
 .App {
-  position: fixed;
-  height: 100%;
   min-width: 100%;
+  margin-top: 2rem;
   background-color: var(--almostWhite);
   transition: all 0.5s ease-in-out;
 }
@@ -31,23 +30,22 @@ $small: 924px;
 .MainApp {
   text-align: center;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  left: 5%;
+  right: 5%;
   box-sizing: border-box;
-  height: 100%;
   min-width: 90%;
   max-width: 1248px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  gap: 2rem;
 }
 
 header {
   min-width: 90%;
   max-width: 100%;
   display: flex;
-  flex: 2 2 0;
+  flex: 2 1 0;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
@@ -57,7 +55,7 @@ main {
   display: flex;
   flex: 10;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
 }
 
