--- a/src/components/Stay/Stay.module.scss
+++ b/src/components/Stay/Stay.module.scss
@@ -1,7 +1,7 @@
 .StayContainer {
-  content: "";
   display: flex;
-  align-items: space-between;
+  flex-direction: column;
+  justify-content: space-between;
   border: 1px solid red;
 }
 
@@ -13,6 +13,7 @@
 
 .StayItem {
   flex: 1;
+  flex-direction: row;
   justify-content: space-between;
   width: 100%;
   border: none;
